[package]
name = "pathfinder_view"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
pathfinder_geometry = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_export = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_color = { git = "https://github.com/s3bk/pathfinder/" }
pathfinder_resources = { git = "https://github.com/s3bk/pathfinder/", features = ["gl3_shaders", "textures_lut"] }
cfg-if = "*"
log = "*"
winit = { git = "https://github.com/s3bk/winit/", features = ["web-sys"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
pathfinder_webgl = { git = "https://github.com/s3bk/pathfinder/" }
web-sys = { version = "*", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "WebGl2RenderingContext",
    "Blob",
    "console",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "*"
wasm-bindgen = "*"

[target.'cfg(target_os="linux")'.dependencies]
pathfinder_gl = { git = "https://github.com/s3bk/pathfinder/" }
gl = "0.14.0"
glutin = { git = "https://github.com/s3bk/glutin/" }
