[package]
name = "pathfinder_view"
version = "0.1.0"
authors = ["Sebastian K <s3bk@protonmail.com>"]
edition = "2018"

[dependencies]
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder/" }
pathfinder_export = { git = "https://github.com/servo/pathfinder/" }
pathfinder_color = { git = "https://github.com/servo/pathfinder/" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder/" }
cfg-if = "*"
log = "*"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pathfinder_content = { git = "https://github.com/servo/pathfinder/" }
env_logger = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
pathfinder_webgl = { git = "https://github.com/servo/pathfinder/" }
web-sys = { version = "*", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "WebGl2RenderingContext",
    "Blob",
    "console",
    "BlobPropertyBag",
    "Url",
    "UiEvent",
    "HtmlCanvasElement",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "Event",
    "CssStyleDeclaration",
    "HtmlElement",
    "ClipboardEvent",
    "InputEvent",
    "DataTransfer"
] }
js-sys = "*"
wasm-bindgen = "*"
bincode = "*"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
pathfinder_gl = { git = "https://github.com/servo/pathfinder/" }
gl = "0.14.0"
glutin = { version = "*" }
winit = { version = "0.22.2" }
